# supertonic-py

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  llms.txt  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: index.md  quickstart.md
docs/api/: index.md  server.md
docs/argparse/: say.inc.md  serve.inc.md  tts.inc.md
docs/cli/: .nav.yml  README.md  serve.md
docs/hooks/: copy_llmstxt.py  generate_api_ref.py
examples/: README.md  test2_voices.py  test9_multilingual.py
supertonic/: __init__.py  cli.py  config.py  core.py  loader.py  pipeline.py
supertonic/server/: __init__.py  app.py  audio.py  routes.py  schemas.py  styles_store.py
supertonic/server/config/: __init__.py
tests/: test_cli.py  test_cli_serve.py  test_imports.py  test_loader.py  test_server_routes.py  test_validation.py
